--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,16 +376,23 @@ section {
 .skills .progress .skill {
   padding: 0;
   margin: 0 0 6px 0;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   display: block;
   font-weight: 600;
-  font-family: "Poppins", sans-serif;
+  font-family: "Consolas", sans-serif;
   color: #050d18;
 }
 .skills .progress .skill .val {
   float: right;
   font-style: normal;
+  font-size: 20px;
 }
+
+.skills .progress .skill img {
+  height: 32px;
+  /* width: 40px; */
+}
+
 .skills .progress-bar-wrap {
   background: #dce8f8;
   height: 10px;
@@ -718,6 +725,13 @@ section {
   background-color: #149ddd;
 }
 
+.testimonials .pdf{
+  margin: 0px;
+  padding-left: 5px;
+  font-size: 35px;
+  position: absolute;
+  bottom: 10px;  
+}
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
