--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,12 +309,22 @@ section {
 .about .content ul strong {
   margin-right: 10px;
 }
+
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
   color: #149ddd;
   line-height: 0;
 }
+
+/* Sami */
+.about .content ul.research i {
+  font-size: 50px;
+  margin-right: 5px;
+  color: #149ddd;
+  line-height: 0;
+}
+
 .about .content p:last-child {
   margin-bottom: 0;
 }
