--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,16 +314,31 @@ section {
   font-size: 16px;
   margin-right: 5px;
   color: #149ddd;
-  line-height: 0;
+  /* line-height: 0; */
 }
 
 /* Sami */
-.about .content ul.research i {
+.about .content td i{
   font-size: 50px;
   margin-right: 5px;
   color: #149ddd;
-  line-height: 0;
+  /*line-height: 0;*/
 }
+
+.about .content table tr{
+  margin-bottom: 500px;
+}
+
+.about .content table td.icon {
+  
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  vertical-align: middle;
+}
+
 
 .about .content p:last-child {
   margin-bottom: 0;
@@ -443,7 +458,7 @@ section {
   font-size: 16px;
   background: #e4edf9;
   padding: 5px 15px;
-  display: inline-block;
+  /* display: inline-block; */
   font-weight: 600;
   margin-bottom: 10px;
 }
