after adding TOSMTY and other CSS fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@
 #research ol {          
   background-color: rgb(231, 248, 248);
   margin: 10px;
+  padding-top: 10px;
+  padding-bottom: 5px;
 }        
 #research ol li {          
   margin-bottom: 15px;
@@ -16,7 +18,12 @@
 
 #research ol i {          
   font-size: 45pt;
+}        
+
+#research ol a {
   float: right;
+  margin-right: 10px;
+  margin-left: 10px;
 }        
 
 
@@ -113,8 +120,9 @@ h1, h2, h3, h4, h5, h6 {
   background: #212431;
   color: #fff;
   line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
+  padding: 8px 5px;
+  margin-right: 0px;
+  margin-left: 0px;
   border-radius: 50%;
   text-align: center;
   width: 36px;
@@ -160,8 +168,8 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   color: #a8a9b4;
-  padding: 12px 15px;
-  margin-bottom: 8px;
+  padding: 5px 5px; 
+  margin-bottom: 0px;
   transition: 0.3s;
   font-size: 15px;
 }
