--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,12 @@
   padding-top: 10px;
   padding-bottom: 5px;
 }        
+
 #research ol li {          
   margin-bottom: 15px;
 }        
 
-#research ol i {          
+/* #research ol i {          
   font-size: 45pt;
 }        
 
@@ -24,6 +25,16 @@
   float: right;
   margin-right: 10px;
   margin-left: 10px;
+}         */
+
+i.proof_icon {
+  font-size: 45pt;
+}        
+
+a.proof_icon {
+  float: right;
+  margin-right: 0px;
+  margin-left: 0px;
 }        
 
 
@@ -417,7 +428,7 @@ section {
 # Akills
 --------------------------------------------------------------*/
 .skills .progress {
-  height: 60px;
+  height: 80px;
   display: block;
   background: none;
   border-radius: 0;
@@ -429,6 +440,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Consolas", sans-serif;
+  font-size: 16px;
   color: #050d18;
 }
 .skills .progress .skill .val {
@@ -438,19 +450,19 @@ section {
 }
 
 .skills .progress .skill img {
-  height: 32px;
+  height: 52px;
   /* width: 40px; */
 }
 
 .skills .progress-bar-wrap {
-  background: #dce8f8;
+  background: #d5e2f4;
   height: 10px;
 }
 .skills .progress-bar {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #149ddd;
+  background-color: #1086bd;
 }
 
 /*--------------------------------------------------------------
@@ -461,7 +473,7 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #050d18;
+  color: #5671b7;
 }
 .resume .resume-item {
   padding: 0 0 20px 20px;
