--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg-2.jpg") top center;
   background-size: cover;
 }
 #hero:before {
@@ -482,11 +482,13 @@ section {
   position: relative;
 }
 .resume .resume-item h4 {
-  line-height: 18px;
+  /* line-height: 18px; */
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
+  background: #e4edf9;
+  padding: 5px 15px;
   color: #050d18;
   margin-bottom: 10px;
 }
