--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,7 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #5671b7;
+  color: #149ddd;
 }
 .resume .resume-item {
   padding: 0 0 20px 20px;
@@ -481,6 +481,7 @@ section {
   border-left: 2px solid #1f5297;
   position: relative;
 }
+
 .resume .resume-item h4 {
   /* line-height: 18px; */
   font-size: 18px;
@@ -492,6 +493,7 @@ section {
   color: #050d18;
   margin-bottom: 10px;
 }
+
 .resume .resume-item h5 {
   font-size: 16px;
   background: #e4edf9;
@@ -500,6 +502,7 @@ section {
   font-weight: 600;
   margin-bottom: 10px;
 }
+
 .resume .resume-item ul {
   padding-left: 20px;
 }
