After adding Arabic page

--- a/assets/css/style-ar.css
+++ b/assets/css/style-ar.css
@@ -32,7 +32,7 @@ i.proof_icon {
 }        
 
 a.proof_icon {
-  float: right;
+  float: left;
   margin-right: 0px;
   margin-left: 0px;
 }        
@@ -42,7 +42,7 @@ a.proof_icon {
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Cairo", sans-serif;
   color: #272829;
 }
 
@@ -57,7 +57,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Noto Kufi Arabic", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   -moz-text-align-last: center;
   text-align-last: center;
-  font-family: "Poppins", sans-serif;
+  font-family: "Noto Kufi Arabic", sans-serif;
 }
 #header .profile h1 a, #header .profile h1 a:hover {
   color: #fff;
@@ -171,6 +171,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   list-style: none;
 }
+
 .nav-menu > ul > li {
   position: relative;
   white-space: nowrap;
@@ -184,15 +185,19 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
   font-size: 15px;
 }
+
 .nav-menu a i, .nav-menu a:focus i {
   font-size: 24px;
   padding-right: 8px;
+  padding-left: 8px;
   color: #6f7180;
 }
+
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
   text-decoration: none;
   color: #fff;
 }
+
 .nav-menu a:hover i, .nav-menu .active i, .nav-menu .active:focus i, .nav-menu li:hover > a i {
   color: #149ddd;
 }
@@ -250,18 +255,23 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 2;
   min-width: 300px;
 }
+
+/* م/ سامي الفتني*/
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 0 0 40px 0;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
   color: #fff;
 }
+
+/* انا مطور ... */
 #hero p {
   color: #fff;
   margin-bottom: 50px;
-  font-size: 26px;
-  font-family: "Poppins", sans-serif;
+  margin-right: 40px;
+  font-size: 30px;
+  font-family: "Cairo", sans-serif;
 }
 #hero p span {
   color: #fff;
@@ -304,17 +314,17 @@ section {
 .section-title h2 {
   font-size: 32px;
   font-weight: bold;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+  /* margin-bottom: 20px; */
+  /* padding-bottom: 20px; */
   position: relative;
   color: #173b6c;
 }
 .section-title h2::after {
   content: "";
-  position: absolute;
+  /* position: absolute; */
   display: block;
-  width: 50px;
-  height: 3px;
+  width: 250px;
+  height: 5px;
   background: #149ddd;
   bottom: 0;
   left: 0;
@@ -385,14 +395,14 @@ section {
   padding-bottom: 30px;
 }
 .facts .count-box {
-  padding: 30px;
+  padding: 10px;
   width: 100%;
 }
 .facts .count-box i {
   display: block;
   font-size: 44px;
   color: #149ddd; /*#149ddd*/
-  float: left;
+  float: right;
   line-height: 0;
 }
 
@@ -402,12 +412,12 @@ section {
   display: block;
   font-weight: 700;
   color: #050d18;
-  margin-left: 60px;
+  margin-right: 60px;
 }
 .facts .count-box p {
   padding: 15px 0 0 0;
-  margin: 0 0 0 60px;
-  font-family: "Raleway", sans-serif;
+  margin: 0 0 0 20px;
+  font-family: "Noto Kufi Arabic", sans-serif;
   font-size: 14px;
   color: #122f57;
 }
@@ -417,7 +427,7 @@ section {
   margin-top: 20px;
   color: #122f57;
   font-size: 15px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Noto Kufi Arabic", sans-serif;
   transition: ease-in-out 0.3s;
 }
 .facts .count-box a:hover {
@@ -468,11 +478,6 @@ section {
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
-
-.resume .resume-item i.proof_icon {
-  font-size: 30pt;
-}        
-
 .resume .resume-title {
   font-size: 26px;
   font-weight: 700;
@@ -492,7 +497,7 @@ section {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: "cairo", sans-serif;
+  font-family: "Cairo", sans-serif;
   background: #e4edf9;
   padding: 5px 15px;
   color: #050d18;
