--- a/assets/css/style-ar.css
+++ b/assets/css/style-ar.css
@@ -296,6 +296,24 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+#hero button {
+  background: #149ddd;
+  border: 0;
+  padding: 10px 10px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 4px;
+  font-size: 18px;
+}
+#hero button:hover {
+  background: #37b3ed; /*37b3ed*/
+}
+#hero button img{
+  width: 20px;
+}
+
+
+
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
