--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,11 +154,27 @@ h1, h2, h3, h4, h5, h6 {
   #header {
     left: -300px;
   }
-
   #main {
     margin-left: 0;
   }
 }
+
+#hero button {
+  background: #149ddd;
+  border: 0;
+  padding: 10px 10px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 4px;
+  font-size: 18px;
+}
+#hero button:hover {
+  background: #37b3ed; /*37b3ed*/
+}
+#hero button img{
+  width: 20px;
+}
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
